# ptz-pano

./: .gitattributes  .gitignore  README.md  pyproject.toml
backend/app/ptz_pano/: __init__.py  jsonio.py  models.py
backend/app/ptz_pano/api/: README.md  calibrate_lens.html  main.py  viewer.html
backend/app/ptz_pano/calibration/: README.md  __init__.py  fov_table.py  lens_table.py
backend/app/ptz_pano/camera/: README.md  __init__.py  interfaces.py  ptzoptics_visca_tcp.py  targeting.py
backend/app/ptz_pano/capture/: README.md  __init__.py  rtsp_capture.py  snapshot_capture.py
backend/app/ptz_pano/hotspots/: README.md  __init__.py  store.py
backend/app/ptz_pano/panorama/: README.md  __init__.py  alignment.py  builder.py  simple_compositor.py
backend/app/ptz_pano/scan/: README.md  __init__.py  scan_planner.py  scan_runner.py
backend/app/ptz_pano/stitching/: README.md  __init__.py  alignment.py  builder.py  simple_compositor.py
backend/app/ptz_pano/storage/: README.md  __init__.py  scan_repository.py
backend/app/ptz_pano/tools/: README.md  __init__.py  build_panorama.py  calibrate_fov.py  calibrate_lens.py  camera_move.py  camera_ping.py  camera_raw.py  camera_status.py  capture_frame.py  config.py  plan_scan.py  run_scan.py
config/: camera.example.json
data/calibration/: ptzoptics.example.fov.json
docs/: architecture.md  manual-calibration.md  modules.md  pipeline.md
scripts/: build-panorama.ps1  check.ps1  setup.ps1  start.ps1
tests/: test_scan_planner.py  test_visca_tcp.py
